--- a/style.css
+++ b/style.css
@@ -1,6 +1,6 @@
 .computer-screen {
-    width: 800px;
-    height: 600px;
+    width: 1100px;
+    height: 900px;
     border: 5px solid #ccc;
     position: relative;
     margin: 50px auto;
@@ -24,7 +24,7 @@
     height: 80%;
     padding: 30px;
     position: absolute;
-    margin-top: 10%;
+    margin-top: 50px;
   }
   
   .password-container input[type="password"] {
@@ -55,5 +55,5 @@
   }
 
   .show-text{
-    display: inline;
+    display: block;
   }
